--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </form>
 
         <div id="weather">
-            <h1 id="title">Portalegre</h1>
+            <h1 id="title"></h1>
 
             <div id="infos">
                 <div id="temp">
